--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./form.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>form</title>
 </head>
 <body>
@@ -15,13 +16,14 @@
             <div class="social-login"> <button class="google"> <li class="fa-brands fa-google"></li>
             <p class="btn-text">Sign in with Google</p>
             </button>
-            <button class="github"> <li class="fa-brands fa-githubs"></li></button>
+            <button class="github"> <i class="fa-brands fa-github"></i></button>
         </div>
         <p class="or"><span>or continue with</span></p>
         <div class="email-login"><label for="email"><b>Email</b></label>
-        <input type="text" for="Email">
-        <label for="password"><b>Password</b></label>
-        <input type="password" name="Password">
+        <input type="email" for="Email">
+        <div class="password"><label for="password"><b>Password</b></div></label>
+        <input type="password" name="Password" id="password" required="true">
+        <i class="fa-regular fa-eye"></i>
         </div>
         <button class="Submit">Submit</button>
         <a href="#" class="Forgot-password">Forgot Password</a>
