--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class="title">Log in</h2>
             <p class="subtitle">Don't have an Account?<a href="#">Sign up</a></p>
             <div class="social-login"> <button class="google"> <li class="fa-brands fa-google"></li>
-            <p class="btn-text">Sign in with Google</p>
+            <p class="btn-text"><a href="https://accounts.google.com/v3/signin/identifier?authuser=0&continue=https%3A%2F%2Fmail.google.com%2Fmail&ec=GAlAFw&hl=en&service=mail&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S-620699582%3A1711580526641799&theme=mn&ddm=0" target="_blank" >Sign in with Google</a></p>
             </button>
             <button class="github"> <i class="fa-brands fa-github"></i></button>
         </div>
